@@ -23,6 +23,11 @@ API Changes:
   * util-slf4j-api: Ensure that marker information is used when determining if log
     level is enabled for methods which support markers. ``PHAB_ID=D202387``
 
+New Features:
+
+  * util-core: Added Reader#fromAsyncStream for consuming an `AsyncStream` as a `Reader`.
+    ``PHAB_ID=D202334``
+
 18.8.0  2018-08-06
 
 Bug Fixes:
